@@ -1,3 +1,4 @@
+import { InteractionContext } from '../../types/menhera';
 import { AwardValues } from './dailies';
 
 /* eslint-disable camelcase */
@@ -7,12 +8,14 @@ type DailyTypes =
   | 'win_stars_in_bets'
   | 'announce_product'
   | 'success_on_hunt'
-  | 'use_action_commands';
+  | 'use_action_commands'
+  | 'harvest_plants';
 
 export interface Daily {
   type: DailyTypes;
   amountLimits: [number, number];
   specifications?: string[];
+  specificationDisplay?: (ctx: InteractionContext, specification: string) => string;
 }
 
 export type Award<Helper extends number | string> = {
